# nostradamus-ioto-sdk

./: .env.example  AGENTS.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: API_RESPONSE_FIX.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CLI.md  CONTRIBUTING.md  DEBUGGING_INFO.md  FINAL_STATUS.md  FIX_SUMMARY.md  GRACEFUL_ERROR_HANDLING.md  HOW_TO_TEST.md  IMPLEMENTATION_STATUS.md  PROGRESS_SUMMARY.md  PROGRESS_UPDATE.md  QUICK_START.md  READY_TO_TEST.md  SDK_READY.md  SECURITY_CLEANUP.md  SESSION_CONTINUATION_SUMMARY.md  TESTING_GUIDE.md  TEST_STATUS.md  URL_VERIFICATION.md
examples/: README.md  _load_env.py  async_usage.py  basic_usage.py  data_ingestion.py  ioto_api_demo.py  soil_monitoring_example.py
examples/agriculture/: greenhouse_automation.py  livestock_tracking.py  precision_farming.py
examples/cyber_physical/: robot_fleet_monitoring.py
examples/smart_city/: air_quality_monitoring.py
examples/smart_energy/: microgrid_monitoring.py
examples/smart_transportation/: fleet_management.py
nostradamus_ioto_sdk/: AGENTS.md  __init__.py  _base_client.py  _http.py  _logging.py  async_client.py  auth.py  client.py  config.py  exceptions.py
nostradamus_ioto_sdk/cli/: main.py
nostradamus_ioto_sdk/models/: AGENTS.md  __init__.py  _base.py  _generated.py  collection.py  data.py  enums.py  errors.py  organization.py  project.py  project_key.py
nostradamus_ioto_sdk/resources/: AGENTS.md  _base.py  collections.py  data.py  organizations.py  project_keys.py  projects.py
nostradamus_ioto_sdk/utils/: validators.py
scripts/: diagnose.py  generate_models.py  test_client.py  test_sdk_quick.py
tests/integration/: README.md  test_client_integration.py.disabled
tests/unit/: test_auth.py  test_cli.py  test_client.py  test_config.py  test_exceptions.py  test_http.py  test_models.py  test_resources_base.py  test_resources_organizations.py
