[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nostradamus-ioto-sdk"
version = "0.1.0"
description = "Professional Python SDK for Nostradamus IoT Observatory API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nostradamus Team", email = "contact@nostradamus.io"}
]
keywords = ["iot", "nostradamus", "observatory", "sdk", "api-client", "time-series"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "respx>=0.20.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-python-dateutil>=2.8.0",
    "pylint>=3.0.0",
    "datamodel-code-generator>=0.22.0",
]
cli = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/nostradamus/nostradamus-ioto-sdk"
Documentation = "https://nostradamus-ioto-sdk.readthedocs.io"
Repository = "https://github.com/nostradamus/nostradamus-ioto-sdk"
Issues = "https://github.com/nostradamus/nostradamus-ioto-sdk/issues"

[project.scripts]
nioto = "nostradamus_ioto_sdk.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["nostradamus_ioto_sdk*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.ruff]
line-length = 88
target-version = "py38"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = true
strict_equality = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "nostradamus_ioto_sdk.resources.*"
warn_return_any = false
check_untyped_defs = false
# Disable union-attr and misc errors due to sync/async method coexistence
disable_error_code = ["union-attr", "misc", "return-value"]

[[tool.mypy.overrides]]
module = "nostradamus_ioto_sdk.cli.*"
warn_return_any = false
check_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=nostradamus_ioto_sdk",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.pylint.main]
# Only lint the SDK package, not tests/scripts/examples
source-roots = ["."]
ignore-paths = ["tests", "scripts", "examples", "docs"]

[tool.pylint."messages control"]
disable = [
    "C0114",  # missing-module-docstring — enforced selectively, not globally
    "C0115",  # missing-class-docstring — Pydantic models are self-documenting
    "C0116",  # missing-function-docstring — private helpers don't always need docstrings
    "R0903",  # too-few-public-methods — Pydantic models / config dataclasses
    "R0801",  # duplicate-code — sync/async twins are intentionally duplicated
    "W0622",  # redefined-builtin — SDK intentionally defines ConnectionError, TimeoutError, ValidationError
    "E0611",  # no-name-in-module — false positives with pydantic re-exports
    "C0209",  # consider-using-f-string — let black/ruff handle style
    "W0511",  # fixme — allow TODO/FIXME comments
    "C0301",  # line-too-long — handled by black
    "W0107",  # unnecessary-pass — used in abstract/placeholder methods
    "W0212",  # protected-access — resources access _client._request() by design
    "C0415",  # import-outside-toplevel — circular import guards are intentional
    "R0917",  # too-many-positional-arguments — SDK API surface requires many params
    "R0902",  # too-many-instance-attributes — client classes need many attributes
    "R0912",  # too-many-branches — retry logic is inherently branchy
    "R0914",  # too-many-locals — retry functions need many local vars
    "W0718",  # broad-exception-caught — CLI uses catch-all at boundary; _base_client wraps httpx
    "W0621",  # redefined-outer-name — Click decorator pattern
    "W0221",  # arguments-differ — Pydantic v2 model_post_init signature
    "C0103",  # invalid-name — auto-generated enum values are lowercase
    "E1120",  # no-value-for-parameter — false positive with Click decorators
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.basic]
good-names = ["T", "e", "i", "k", "v", "f", "id", "ok"]

[tool.pylint.design]
max-args = 10
max-locals = 20

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-imports = true

[tool.coverage.run]
source = ["nostradamus_ioto_sdk"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/.*",
    "nostradamus_ioto_sdk/models/_generated.py",
    "nostradamus_ioto_sdk/utils/validators.py",
    "nostradamus_ioto_sdk/_logging.py",
    "nostradamus_ioto_sdk/async_client.py",
    "nostradamus_ioto_sdk/_base_client.py",
    "nostradamus_ioto_sdk/resources/collections.py",
    "nostradamus_ioto_sdk/resources/data.py",
    "nostradamus_ioto_sdk/resources/project_keys.py",
    "nostradamus_ioto_sdk/resources/projects.py",
]

[tool.coverage.report]
fail_under = 80

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
